--- a/Instructions/20776A_LAB_AK_02.md
+++ b/Instructions/20776A_LAB_AK_02.md
@@ -3,59 +3,59 @@
 
 ## Exercise 1: Create a Stream Analytics job to process event hub data
 
-#### Task 1: Create a Data Lake Store
+#### Task 1: Create a Azure Data Lake Store
 1.  Ensure that the **MT17B-WS2016-NAT**, **20776A-LON-DC**, and **20776A-LON-DEV** virtual machines are running, and then log on to **20776A-LON-DEV** as **ADATUM\AdatumAdmin** with the password **Pa55w.rd**.
 2.  On the Start menu, type **Internet Explorer**, and then press Enter.
 3.  In Internet Explorer, go to http://portal.azure.com, and sign in using the Microsoft account that is associated with your Azure Learning Pass subscription.
-4.  In the Azure portal, click **+ New**, click **Storage**, and then click **Data Lake Store**.
-5.  On the **Data Lake Store** blade, click **Create**.
-6.  On the **New Data Lake Store** blade, in the **Name** box, type **adls&lt;_your name_&gt;&lt;_date_&gt;**.
+4.  In the Azure portal, click **+ Create a resource**, click **Storage**, and then click **Azure Data Lake Storage Gen1**.
+5.  On the **Azure Data Lake Storage Gen1** blade, click **Create**.
+6.  On the **New Azure Data Lake Storage Gen1** blade, in the **Name** box, type **adls&lt;_your name_&gt;&lt;_date_&gt;**.
 7.  Under **Resource** **Group**, click **Create new**, and type **CamerasRG**.
-8.  In the **Location** list, select your nearest location from the currently available Data Lake Store regions.
+8.  In the **Location** list, select your nearest location from the currently available Azure Data Lake Storage Gen1 regions.
 9.  Leave all other settings at their defaults, and click **Create**.
 10.    Wait until the storage has deployed before continuing with the lab.
 
 #### Task 2: Create an event hubs namespace and hub
-1.  In the Azure portal, click **+ New**, click **Internet of Things**, and then click **Event Hubs**.
+1.  In the Azure portal, click **+ Create a resource**, click **Internet of Things**, and then click **Event Hubs**.
 2.  On the **Create namespace** blade, in the **Name** box, type **camerafeeds&lt;_your name_&gt;&lt;_date_&gt;**.
+3.  In the **Pricing Tier** list, select **Standard**.
+4.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
+5.  In the **Location** list, select the same location as you used for the Data Lake Store.
+6.  Leave all other settings at their defaults, and click **Create**.
+7.  Wait until the namespace has deployed before continuing with the lab.
+8.  Click **All resources**, click **camerafeeds&lt;_your name_&gt;&lt;_date_&gt;**, and then click **+ Event Hub**.
+9.  On the **Create Event Hub** blade, in the **Name** box, type **traffic**.
+10.  Set the **Partition Count** to **16**.
+11. Leave all other settings at their defaults, and click **Create**.
+12. Wait until the event hub has deployed before continuing with the lab.
+13. On the **camerafeeds&lt;_your name_&gt;&lt;_date_&gt;** blade, under **ENTITIES**, click **Event Hubs**, and then click **traffic**.
+14. On the **traffic** blade, click **+ Consumer Group**.
+15. On the **Create consumer group** blade, in the **Name** box, type **cameradatafeed**, and then click **Create**.
+16. On the **traffic** blade, click **+ Consumer Group**.
+17. On the **Create consumer group** blade, in the **Name** box, type **cameradatafeed2**, and then click **Create**.
+18. Close the traffic blade.
+19. On the **camerafeeds&lt;_your name_&gt;&lt;_date_&gt; - Event Hubs** blade, under **SETTINGS**, click **Shared access policies**, and then click **RootManageSharedAccessKey**.
+20. Next to the **PRIMARY KEY**, click the **Click to copy** button, to copy the primary key to the clipboard.
+21. On the Start menu, type **Notepad**, and then press Enter.
+22. In Notepad, type **Event hub primary key**, and press Enter.
+23. On the **Edit** menu, click **Paste**, to store the primary key.
+24. On the **File** menu, click **Save**.
+25. In the **Save As** dialog box, go to **E:\\Labfiles\\Lab02**, in the **File name** box, type **Config\_details.txt**, and then click **Save**.
+
+#### Task 3: Create a Stream Analytics job
+1.  Switch to the Azure portal, click **+ Create a resource**, click **Analytics**, and then click **Stream Analytics job**.
+2.  On the **New Stream Analytics Job** blade, in the **Job name** box, type **TrafficAnalytics**.
 3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 4.  In the **Location** list, select the same location as you used for the Data Lake Store.
 5.  Leave all other settings at their defaults, and click **Create**.
-6.  Wait until the namespace has deployed before continuing with the lab.
-7.  Click **All resources**, click **camerafeeds&lt;_your name_&gt;&lt;_date_&gt;**, and then click **+ Event Hub**.
-8.  On the **Create Event Hub** blade, in the **Name** box, type **traffic**.
-9.  Set the **Partition Count** to **16**.
-10. Leave all other settings at their defaults, and click **Create**.
-11. Wait until the event hub has deployed before continuing with the lab.
-12. On the **camerafeeds&lt;_your name_&gt;&lt;_date_&gt;** blade, under **ENTITIES**, click **Event Hubs**, and then click **traffic**.
-13. On the **traffic** blade, click **+ Consumer Group**.
-14. On the **Create consumer group** blade, in the **Name** box, type **cameradatafeed**, and then click **Create**.
-15. On the **traffic** blade, click **+ Consumer Group**.
-16. On the **Create consumer group** blade, in the **Name** box, type **cameradatafeed2**, and then click **Create**.
-17. Close the traffic blade.
-18. On the **camerafeeds&lt;_your name_&gt;&lt;_date_&gt; - Event Hubs** blade, under **SETTINGS**, click **Shared access policies**, and then click **RootManageSharedAccessKey**.
-19. Next to the **PRIMARY KEY**, click the **Click to copy** button, to copy the primary key to the clipboard.
-20. On the Start menu, type **Notepad**, and then press Enter.
-21. In Notepad, type **Event hub primary key**, and press Enter.
-22. On the **Edit** menu, click **Paste**, to store the primary key.
-23. On the **File** menu, click **Save**.
-24. In the **Save As** dialog box, go to **E:\\Labfiles\\Lab02**, in the **File name** box, type **Config\_details.txt**, and then click **Save**.
-
-#### Task 3: Create a Stream Analytics job
-1.  Switch to the Azure portal, click **+ New**, click **Data + Analytics**, and then click **Stream Analytics** **job**.
-2.  On the **New Stream Analytics** **Job** blade, in the **Job name** box, type **TrafficAnalytics**.
-3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
-4.  In the **Location** list, select the same location as you used for the Data Lake Store, and then click **Create**.
 5.  Wait until the Stream Analytics job has deployed before continuing with the lab.
 
 #### Task 4: Configure Stream Analytics job inputs
 1.  In the Azure portal, click **All resources**, and then click **TrafficAnalytics**.
-2.  On the **TrafficAnalytics** blade, under **JOB TOPOLOGY**, click **Inputs**, and then click **+ Add**.
+2.  On the **TrafficAnalytics** blade, under **JOB TOPOLOGY**, click **Inputs**, and then click **+ Add stream input** and **Event Hub**.
 3.  On the **New input** blade, enter the following details:
     - **Input alias**: CameraDataFeed
-    - **Source Type**: Data stream
-    - **Source**: Event hub
-    - **Import option**: Provide event hub settings manually
+    - Select **Provide event hub settings manually**
     - **Service bus namespace**: camerafeeds&lt;_your name_&gt;&lt;_date_&gt; as you created earlier
     - **Event hub name**: traffic
     - **Event hub policy name**: RootManageSharedAccessKey
@@ -63,12 +63,10 @@
     - **Event hub consumer group**: cameradatafeed
 4. Leave all other settings at their defaults, and click **Create**.
 5. Wait until the input has been successfully created before continuing with the lab.
-6. On the **TrafficAnalytics - Inputs** blade, click **+ Add**.
+6. On the **TrafficAnalytics - Inputs** blade, click **+ Add stream input** and **Event Hub**.
 7.  On the **New input** blade, enter the following details:
     - **Input alias**: CameraDataFeed2
-    - **Source Type**: Data stream
-    - **Source**: Event hub
-    - **Import option**: Provide event hub settings manually
+    - Select **Provide event hub settings manually**
     - **Service bus namespace**: camerafeeds&lt;_your name_&gt;&lt;_date_&gt; as you created earlier
     - **Event hub name**: traffic
     - **Event hub policy name**: RootManageSharedAccessKey
@@ -78,22 +76,22 @@
 9. Wait until the input has been successfully created before continuing with the lab.
 
 #### Task 5: Configure Stream Analytics job outputs
-1.  On the **TrafficAnalytics - Inputs** blade, under **JOB TOPOLOGY**, click **Outputs**, and then click **+ Add**.
-2.  On the **New output** blade, enter the following details, and then click **Create**:
+1.  In a new tab, go to http://powerbi.com, and sign in using the account that is associated with your Office 365 trial subscription.
+2.  Make sure all intials steps are completed and select **My Workspace** in the Power BI portal. 
+3.  On the **TrafficAnalytics - Inputs** blade, under **JOB TOPOLOGY**, click **Outputs**, and then click **+ Add** and **Power BI**.
+4.  On the **New output** blade, enter the following details, and then click **Create**:
     - **Output alias**: VisualData
-    - **Sink**: Power BI
-    - Click **Authorize**, and sign in using your Power BI credentials
     - **Dataset Name**: TrafficData
     - **Table Name**: TrafficData
-3. Wait until the output has been successfully created before continuing with the lab.
-4. On the **TrafficAnalytics - Outputs** blade, click **+ Add**.
-5. On the **New output** blade, enter the following details:
+    - Click **Authorize**, and sign in using your Power BI credential
+5. Wait until the output has been successfully created before continuing with the lab.
+6. On the **TrafficAnalytics - Outputs** blade, click **+ Add** and **Data Lake Store.
+7. On the **New output** blade, enter the following details:
  - **Output alias**: StoredData
-    - **Sink**: Data Lake Store
     - Click **Authorize**, and sign in using your Power BI credentials (you might not be prompted this time)
     - **Path prefix pattern**: SpeedData/{date}/{time}
-6. Leave all other settings at their defaults, and click **Create**.
-7. Wait until the output has been successfully created before continuing with the lab.
+8. Leave all other settings at their defaults, and click **Create**.
+9. Wait until the output has been successfully created before continuing with the lab.
 
 #### Task 6: Configure a Stream Analytics job query
 1.  On the **TrafficAnalytics - Outputs** blade, under **JOB TOPOLOGY**, click **Query**, and then replace the template query text with the following:
@@ -170,7 +168,7 @@ You copy the preceding commands from **E:\\Labfiles\\Lab02\\ASAquery1.txt**.
 ## Exercise 2: Create a Stream Analytics job to process IoT hub data
 
 #### Task 1: Create an IoT hub
-1.  In the Azure portal, click **+ New**, click **Internet of Things**, and then click **IoT Hub**.
+1.  In the Azure portal, click **+ Create a resource**, click **Internet of Things**, and then click **IoT Hub**.
 2.  On the **IoT Hub** blade, in the **Name** box, type **patrolcars&lt;_your name_&gt;&lt;_date_&gt;**.
 3.  Click **Pricing** **and scale tier**, click **F1 Free**, and then click **Select**.
 4.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
@@ -193,7 +191,7 @@ You copy the preceding commands from **E:\\Labfiles\\Lab02\\ASAquery1.txt**.
 21. Switch to the Azure portal, and close the **iothubowner** pane.
 
 #### Task 2: Create a new Stream Analytics job
-1.  In the Azure portal, click **+ New**, click **Data + Analytics**, and then click **Stream Analytics job**.
+1.  In the Azure portal, click **+ Create a resource**, click **Data + Analytics**, and then click **Stream Analytics job**.
 2.  On the **New Stream Analytics Job** blade, in the **Job name** box, type **PatrolCarAnalytics**.
 3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 4.  In the **Location** list, select the same location as you used for the Data Lake Store, and then click **Create**.
@@ -300,7 +298,7 @@ You copy the preceding commands from **E:\\Labfiles\\Lab02\\ASAquery2.txt**.
 ## Exercise 3: Reconfigure a Stream Analytics job to send output through a Service Bus queue
 
 #### Task 1: Create a Service Bus and queue
-1.  In the Azure portal, click **+ New**, click **Enterprise Integration**, and then click **Service Bus**.
+1.  In the Azure portal, click **+ Create a resource**, click **Enterprise Integration**, and then click **Service Bus**.
 2.  On the **Create namespace** blade, in the **Name** box, type **locationalerts&lt;_your name_&gt;&lt;_date_&gt;**.
 3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 4.  In the **Location** list, select the same location as you used for the Data Lake Store, and click **Create**.
@@ -391,7 +389,7 @@ You copy the preceding commands from **E:\\Labfiles\\Lab02\\ASAquery3.txt**.
 ## Exercise 4: Reconfigure a Stream Analytics job to process both event hub and static file data
 
 #### Task 1: Create a Blob storage account for holding stolen vehicle data
-1.  In the Azure portal, click **+ New**, click **Storage**, and then click **Storage account - blob, file, table, queue**.
+1.  In the Azure portal, click **+ Create a resource**, click **Storage**, and then click **Storage account - blob, file, table, queue**.
 2.  On the **Storage account - blob, file, table, queue** blade, click **Create**.
 3.  On the **Create storage account** blade, in the **Name** box, type **datastore&lt;_your name_&gt;&lt;_date_&gt;**.
 4.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
