Gen1 for SQL Datawarehouse
Gen1 for SQL Datawarehouse option

--- a/Instructions/20776A_LAB_AK_07.md
+++ b/Instructions/20776A_LAB_AK_07.md
@@ -10,12 +10,12 @@
 3.  In Internet Explorer, go to **https://docs.microsoft.com/en-us/azure/storage/storage-use-azcopy**.
 4.  On the **Transfer data with the AzCopy on Windows** page, click the **Download and install AzCopy on Windows** link, and then click the **latest version of AzCopy on Windows** link.
 5.  In the Internet Explorer message box, click **Run**.
-6.  In the **Microsoft Azure Storage Tools – v6.2.0 Setup** dialog box, on the **Welcome to the Microsoft Azure Storage Tools – v6.2.0 Setup Wizard** page, click **Next**.
+6.  In the **Microsoft Azure Storage Tools – v8.0.0-notcorepreview Setup** dialog box, on the **Welcome to the Microsoft Azure Storage Tools – v8.0.0-netcorepreview Setup Wizard** page, click **Next**.
 7.  On the **End-User License Agreement** page, select the **I accept the terms in the License Agreement** check box, and then click **Next**.
 8.  On the **Destination Folder** page, click **Next**.
-9.  On the **Ready to install Microsoft Azure Storage Tools – v6.2.0** page, click **Install**.
+9.  On the **Ready to install Microsoft Azure Storage Tools – v8.0.0-notcorepreview** page, click **Install**.
 10. In the **User Account Control** dialog box, click **Yes**.
-11. On the **Completed the Microsoft Azure Storage Tools – v6.2.0 Setup Wizard** page, click **Finish**.
+11. On the **Completed the Microsoft Azure Storage Tools – v8.0.0-notcorepreview Setup Wizard** page, click **Finish**.
 12. Right-click the Start button, click **System**, and then click **Advanced system settings**.
 13. In the **System Properties** dialog box, click **Environment Variables**.
 14. In the **Environment Variables** dialog box, under **User variable for AdatumAdmin**, click **Path**, and then click **Edit**.
@@ -42,7 +42,7 @@
 35. Close the System window.
 
 #### Task 2: Create a new database server
-1.  In the Azure portal, click **+ New**, then in the **Search marketplace** box, type **sql server**, and then click **SQL server (logical server)**.
+1.  In the Azure portal, click **+ Create a resource**, then in the **Search marketplace** box, type **sql server**, and then click **SQL server (logical server)**.
 2.  On the **SQL server (logical server)** blade, click **Create**.
 3.  On the **SQL Server (logical server only)** blade, enter the following details:
     - **Server name**: trafficserver&lt;_your name_&gt;&lt;_date_&gt;
@@ -51,7 +51,7 @@
     - **Confirm password**: Pa55w.rd
 4.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 5.  In the **Location** list, select the same location as you have used for Data Lake Stores in previous labs.
-6.  Ensure that the **Allow azure services to access server** check box is selected.
+6.  The **Allow azure services to access server** check box is selected by default.
 7.  Leave all other settings at their defaults, and click **Create**.
 8.  Wait until the server has deployed before continuing with the lab.
 9.  In the Azure portal, click **All resources**, and then click **trafficserver&lt;_your name_&gt;&lt;_date_&gt;**.
@@ -59,12 +59,14 @@
 11. Ensure that **Allow access to Azure services** in set to **ON**, click **Save**, and then click **OK**.
 
 #### Task 3: Create a new SQL Data Warehouse
-1.  In the Azure portal, click **+ New**, click **Databases**, and then click **SQL Data Warehouse**.
+1.  In the Azure portal, click **+ Create a resource**, click **Databases**, and then click **SQL Data Warehouse**.
 2.  On the **SQL Data Warehouse** blade, in the **Database name** box, type **trafficwarehouse**.
 3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 4.  In the **Select source** list, click **Blank database**.
 5.  Click **Server**.
 6.  On the **Server** blade, click **trafficserver&lt;_your name_&gt;&lt;_date_&gt;**.
+7.  Click **Performance level**
+8.  One the **Configure performance** page, click **Gen1**
 7.  On the **SQL Data Warehouse** blade, set the **Performance level** to **100** DWU.
 8.  Leave all other settings at their defaults, and click **Create**.
 9.  Wait until the data warehouse has deployed before continuing with the lab.
@@ -239,7 +241,7 @@ Answer:
 
 #### Task 1: Stage data in Data Lake Store prior to SQL Data Warehouse import
 **Note**: This task is only necessary if you have not performed exercise 3 of module 6 which uses the same data. If you have already staged the stolen vehicle data in Data Lake Store, then skip to the next task to stage data in an on-premises SQL Server database.
-1.  In the Azure portal, click **+ New**, click **Storage**, and then click **Storage account - blob, file, table, queue**.
+1.  In the Azure portal, click **+ Create a resource**, click **Storage**, and then click **Storage account - blob, file, table, queue**.
 2.  On the **Create Storage account** blade, in the **Name** box, type **vehicledata&lt;_your name_&gt;&lt;_date_&gt;**.
 3.  Under **Resource group**, click **Use existing**, and then click **CamerasRG**.
 4.  In the **Location** list, select the same location as you used for the data warehouse in Exercise 1.
