Select U-SQL Project added
 After expanding the Azure Data Lake and U-SQL folder, you have to select the U-SQL Project. In a more recent version of Visual Studio the subfolder is not U-SQL (ADLA) anymore, it is just U-SQL.

--- a/Instructions/20776A_LAB_AK_05.md
+++ b/Instructions/20776A_LAB_AK_05.md
@@ -61,7 +61,7 @@ If you haven't completed lab 2, perform the following steps to create a Data Lak
 
 1. On the Start menu, type **Visual Studio 2017**, and then press Enter.
 2. In Visual Studio, on the **File** menu, click **New**, and then click **Project**.
-3. In the **New Project** dialog box, in the **Templates** list, expand **Azure Data Lake**, and then click **U-SQL (ADLA)**.
+3. In the **New Project** dialog box, in the **Templates** list, expand **Azure Data Lake**, select **U-SQL (ADLA)** and then click **U-SQL Project**.
 4. In the **Name** box, type **CameraSpeeds**, and then click **OK**.
 5. In Solution Explorer, double-click **Script.usql**.
 6. In the **Script.usql** pane, type the following code (you can copy this code from the file **E:\\Labfiles\\Lab05\\Exercise1\\SpeedsJob1.usql**):
