--- a/Instructions/20776A_LAB_AK_08.md
+++ b/Instructions/20776A_LAB_AK_08.md
@@ -271,7 +271,7 @@ If you have not completed Lab 4 or Lab 7, use the following instructions to down
 5. In App.config, in the **appSettings** section, replace the APIKey value **&lt;YourApiKey&gt;** with the API key of the web service that you copied to the **Config\_details.txt** file in Notepad.
 6. Replace the URL value **&lt;YourEndpointUrl&gt;** with the **Request-Response URL** that you copied to Config\_details.txt.
 
-    > **IMPORTANT**: Replace the **&** character near the end of the Request-Response URL (before the text **format=swagger**) with the sequence **&\#x26;** this is necessary because the **&** character is interpreted as an escape character in XML rather than a literal. The sequence **&\#x26;** generates a literal **&**.
+    > **IMPORTANT**: Replace the **&** character near the end of the Request-Response URL (before the text **format=swagger**) with the sequence **\&amp;** this is necessary because the **&** character is interpreted as an escape character in XML rather than a literal. The sequence **\&amp;** generates a literal **&**.
 
 7. On the **Build** menu, click **Build VehicleSpeedPredictor**. Verify that the app compiles successfully.
 8. On the **Debug** menu, click **Start Without Debugging**.
